# svelte-tauri-template

./: README.md  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: panel.json
src-tauri/src/: command.rs  lib.rs  main.rs  panel.rs
src/lib/components/panel/: PanelTitleBar.svelte
src/routes/: +page.svelte
src/routes/panel/: +page.svelte
